<resources>
    <string name="app_name">Pro English</string>
    <string name="can_not_get_account">Can\'t get account information. Please try again.</string>
    <string name="check_network">Please check network connection</string>
    <string name="try_again">Error has occurred. Please try again.</string>
    <string name="log_out_success">Log out success</string>
    <string name="log_out_failure">Log out failure</string>
    <string name="log_in_success">Log in success</string>
    <string name="log_in_failure">Log in failure</string>
    <string name="register_success">Register success</string>
    <string name="register_failure">Register failure</string>
    <string name="home">Home</string>
    <string name="dictionary">Dictionary</string>
    <string name="exam">Exam</string>
    <string name="user">User</string>

    <!--  OnBoarding  -->
    <string name="get_started">GET STARTED</string>
    <string name="i_already_have_an_account">I ALREADY HAVE AN ACCOUNT</string>

    <!--  Home  -->
    <string name="post_success">post success</string>
    <string name="post_failure">post failure</string>

    <!--  User  -->
    <string name="leaderboard_success">leaderboard success</string>
    <string name="leaderboard_failure">leaderboard failure</string>
    <string name="user_success">user success</string>
    <string name="user_failure">user failure</string>

    <!--  Dictionary  -->
    <string name="dictionary_success">dictionary success</string>
    <string name="dictionary_failure">dictionary failure</string>
    <string name="search">Search</string>
    <string name="uk">UK</string>
    <string name="us">US</string>

    <!--  Exam  -->
    <string name="easy">Easy</string>
    <string name="easy_level_basic_knowledge_test">Easy level, basic knowledge test</string>
    <string name="medium">Medium</string>
    <string name="moderate_level_knowledge_test_is_average">Moderate level, knowledge test is average</string>
    <string name="hard">Hard</string>
    <string name="difficult_level_test_knowledge_at_advanced">Difficult level, test knowledge at advanced</string>
    <string name="question_success">question success</string>
    <string name="question_failure">question failure</string>
    <string name="check_answer">Check Answer</string>
    <string name="save_score_success">save score success</string>
    <string name="save_score_failure">save score failure</string>
</resources>