<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.proenglish.features.exam.ExamViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.exam.ExamFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/easy_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginVertical="@dimen/margin_small"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/easy"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/easy_level_basic_knowledge_test"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_medium" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/medium_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginVertical="@dimen/margin_small"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintTop_toBottomOf="@id/easy_card_view"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/medium"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/moderate_level_knowledge_test_is_average"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_medium" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/hard_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginVertical="@dimen/margin_small"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintTop_toBottomOf="@id/medium_card_view"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/hard"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/difficult_level_test_knowledge_at_advanced"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/title_medium" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
