<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.proenglish.features.dictionary.DictionaryUiState" />

        <variable
            name="dictionary"
            type="DictionaryUiState" />

        <variable
            name="viewModel"
            type="com.example.proenglish.features.dictionary.DictionaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        tools:context=".features.dictionary.DictionaryFragment">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/background_search_view"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search"
            android:textColor="@color/dark_color_text"
            android:textSize="@dimen/title_medium"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/word_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@{dictionary.word}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <TextView
            android:id="@+id/uk_txt"
            visibilityView="@{dictionary.uk != null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/word_txt" />

        <ImageView
            android:id="@+id/sound_uk_btn"
            visibilityView="@{dictionary.uk != null}"
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sound_outlined"
            app:layout_constraintBottom_toBottomOf="@id/uk_txt"
            app:layout_constraintEnd_toStartOf="@id/uk_txt"
            app:layout_constraintTop_toTopOf="@id/uk_txt" />

        <TextView
            android:id="@+id/phonetic_uk_txt"
            visibilityView="@{dictionary.uk != null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dictionary.uk.text}"
            app:layout_constraintBottom_toBottomOf="@id/sound_uk_btn"
            app:layout_constraintEnd_toStartOf="@id/sound_uk_btn"
            app:layout_constraintTop_toTopOf="@id/sound_uk_btn" />

        <TextView
            android:id="@+id/us_txt"
            visibilityView="@{dictionary.us != null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sound_uk_btn" />

        <ImageView
            android:id="@+id/sound_us_btn"
            visibilityView="@{dictionary.us != null}"
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sound_outlined"
            app:layout_constraintBottom_toBottomOf="@id/us_txt"
            app:layout_constraintEnd_toStartOf="@id/us_txt"
            app:layout_constraintTop_toTopOf="@id/us_txt" />

        <TextView
            android:id="@+id/phonetic_us_txt"
            visibilityView="@{dictionary.us != null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dictionary.us.text}"
            app:layout_constraintBottom_toBottomOf="@id/sound_us_btn"
            app:layout_constraintEnd_toStartOf="@id/sound_us_btn"
            app:layout_constraintTop_toTopOf="@id/sound_us_btn" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meaning_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/us_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
